--- a/Test/test.html
+++ b/Test/test.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <p>Test 01</p>
-    <p>Test 02</p>
+    <h1>test 01</h1>
+    <h1>test 02</h1>
 </body>
 </html>
